@@ -1,5 +1,28 @@
 package com.fortify.cli.aviator.core;
 
+import static com.fortify.cli.aviator.util.Constants.DEFAULT_PING_INTERVAL_SECONDS;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentLinkedDeque;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import com.fortify.cli.aviator._common.exception.AviatorSimpleException;
 import com.fortify.cli.aviator._common.exception.AviatorTechnicalException;
 import com.fortify.cli.aviator.config.IAviatorLogger;
@@ -14,22 +37,10 @@ import com.fortify.cli.aviator.fpr.Vulnerability;
 import com.fortify.cli.aviator.fpr.filter.Filter;
 import com.fortify.cli.aviator.fpr.filter.FilterSet;
 import com.fortify.cli.aviator.fpr.filter.TagDefinition;
-import com.fortify.cli.aviator.fpr.filter.TagValue;
 import com.fortify.cli.aviator.grpc.AviatorGrpcClient;
 import com.fortify.cli.aviator.grpc.AviatorGrpcClientHelper;
 import com.fortify.cli.aviator.util.Constants;
 import com.fortify.cli.aviator.util.StringUtil;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import java.util.*;
-import java.util.concurrent.*;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
-import static com.fortify.cli.aviator.util.Constants.DEFAULT_PING_INTERVAL_SECONDS;
 
 
 public class IssueAuditor {
@@ -50,10 +61,8 @@ public class IssueAuditor {
 
     private final TagDefinition analysisTag;
     private TagDefinition humanAuditTag;
-    private TagDefinition aviatorPredictionTag;
     private TagDefinition aviatorStatusTag;
 
-    private final AtomicInteger issuesSentToLLM;
     private final IAviatorLogger logger;
 
     public IssueAuditor(List<Vulnerability> vulnerabilities, AuditProcessor auditProcessor, Map<String, AuditIssue> auditIssueMap, FPRInfo fprInfo, IAviatorLogger logger) {
@@ -69,8 +78,6 @@ public class IssueAuditor {
         this.fprInfo = fprInfo;
         this.analysisTag = fprInfo.getFilterTemplate().getTagDefinitions().stream().filter(t -> "Analysis".equalsIgnoreCase(t.getName())).findFirst().orElse(null);
         this.resultsTag = resolveResultTag("", "", analysisTag);
-
-        issuesSentToLLM = new AtomicInteger(0);
     }
 
     private TagDefinition resolveResultTag(String tagName, String tagGuid, TagDefinition analysisTag) {
@@ -85,11 +92,7 @@ public class IssueAuditor {
         }
 
         List<String> values;
-        if (analysisTag != null) {
-            values = analysisTag.getValues().stream().map(TagValue::getValue).collect(Collectors.toList());
-        } else {
-            values = Arrays.asList(Constants.NOT_AN_ISSUE, Constants.EXPLOITABLE);
-        }
+        values = Arrays.asList(Constants.NOT_AN_ISSUE, Constants.EXPLOITABLE);
 
         return new TagDefinition(tagName, StringUtil.isEmpty(tagGuid) ? UUID.randomUUID().toString() : tagGuid, values, false);
     }
@@ -123,7 +126,7 @@ public class IssueAuditor {
         projectName = StringUtil.isEmpty(projectName) ? projectBuildId : projectName;
         logger.progress("Starting audit for project: %s", projectName);
 
-        aviatorPredictionTag = resolveAviatorPredictionTag();
+        TagDefinition aviatorPredictionTag = resolveAviatorPredictionTag();
         aviatorStatusTag = resolveAviatorStatusTag();
         humanAuditTag = resolveHumanAuditStatus();
         LOG.debug("Initialized tags - prediction: {}, status: {}, human: {}",
@@ -178,7 +181,7 @@ public class IssueAuditor {
     private ConcurrentLinkedDeque<UserPrompt> getIssuesToAudit() {
         List<UserPrompt> eligibleUserPrompts = userPrompts.stream()
                 .filter(this::shouldInclude)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, List<UserPrompt>> issuesByCategory = eligibleUserPrompts.stream()
                 .collect(Collectors.groupingBy(UserPrompt::getCategory));
@@ -230,8 +233,6 @@ public class IssueAuditor {
 
             for (int i = 0; i < issues.size(); i++) {
                 UserPrompt issue = issues.get(i);
-                String issueId = issue.getIssueData().getInstanceID();
-
                 if (i >= MAX_PER_CATEGORY) {
                     updateSkippedIssue(issue, MAX_PER_CATEGORY_EXCEEDED, issues.size(), totalNewIssues);
                 } else if (newIssuesInCategoryCapped.get(category) >= auditAllThreshold && i >= totalLimitIndex) {
@@ -249,7 +250,6 @@ public class IssueAuditor {
         ConcurrentLinkedDeque<UserPrompt> issuesToAudit = new ConcurrentLinkedDeque<>();
 
         for (Map.Entry<String, List<UserPrompt>> entry : issuesByCategory.entrySet()) {
-            String category = entry.getKey();
             List<UserPrompt> issues = entry.getValue();
 
             if (issues.size() <= MAX_PER_CATEGORY) {
@@ -304,7 +304,7 @@ public class IssueAuditor {
         if (auditIssue == null) return false;
         Map<String, String> tags = auditIssue.getTags();
         String auditorStatusTag = Constants.AUDITOR_STATUS_TAG_ID;
-        Boolean isAuditorStatusPopulated = tags.containsKey(auditorStatusTag) && tags.get(auditorStatusTag).equalsIgnoreCase("Pending Review");
+        boolean isAuditorStatusPopulated = tags.containsKey(auditorStatusTag) && tags.get(auditorStatusTag).equalsIgnoreCase("Pending Review");
         String aviatorExpectedOutcome = Constants.AVIATOR_EXPECTED_OUTCOME_TAG_ID;
         String analysisTagS = Constants.ANALYSIS_TAG_ID;
 
